Fixed scroll on safari

--- a/src/App.css
+++ b/src/App.css
@@ -39,7 +39,7 @@
 html, body {
   max-width: 100%;
   overflow-x: hidden;
-  scroll-behavior: smooth;
+
 }
 
 @keyframes App-logo-spin {
